--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,1 +1,7 @@
 <h1>ANSWER</h1>
+
+<p>Your question: <%= params["question"] %></p>
+
+<p>Your coach answers: <%= @answer %></p>
+
+<p>Go back to ask formular: <%= link_to "by clicking here", ask_path %></p>
